--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-		<script src="build/three.js"></script>
+		<script src="Build/three.js"></script>
 		<style>
 			body {
 				background-color: #000000;
@@ -71,7 +71,7 @@
 				video.height = 360;
 				video.loop = true;
 				video.muted = true;
-				video.src = "pano.webm";
+				video.src = "images/pano.webm";
 				video.setAttribute( 'webkit-playsinline', 'webkit-playsinline' );
 				video.play();
 
