--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -71,7 +71,7 @@
 				video.height = 360;
 				video.loop = true;
 				video.muted = true;
-				video.src = "images/pano.webm";
+				video.src = "pano.webm";
 				video.setAttribute( 'webkit-playsinline', 'webkit-playsinline' );
 				video.play();
 
