--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -39,13 +39,12 @@
 	</head>
 	<body>
 		<div id="container">
-			<div id="eq-icon" onclick="playvideo()"><h1>Play</h1><!--img src="/images/360_icon.png" width="100%" height="100%"--></div>
+			<div id="eq-icon"><h1>Play</h1><!--img src="/images/360_icon.png" width="100%" height="100%"--></div>
 		</div>
 
 		<script>
 			var camera, scene, renderer;
-			var video = document.createElement( 'video' );
-			
+
 			var texture_placeholder,
 			isUserInteracting = false,
 			onMouseDownMouseX = 0, onMouseDownMouseY = 0,
@@ -71,6 +70,8 @@
 				var geometry = new THREE.SphereBufferGeometry( 500, 60, 40 );
 				geometry.scale( - 1, 1, 1 );
 
+
+				var video = document.createElement( 'video' );
 				video.width = 640;
 				video.height = 360;
 				video.loop = true;
@@ -97,10 +98,6 @@
 				window.addEventListener( 'resize', onWindowResize, false );
 			}
 
-			function playvideo(){
-				video.play();
-			}
-
 			function onWindowResize() {
 				camera.aspect = window.innerWidth / window.innerHeight;
 				camera.updateProjectionMatrix();
@@ -125,6 +122,7 @@
 				onPointerDownLon = lon;
 				onPointerDownLat = lat;
 				hideIcon();
+				video.play();
 			}
 
 			function onDocumentMouseMove( event ) {
