--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -39,7 +39,7 @@
 	</head>
 	<body>
 		<div id="container">
-			<div id="eq-icon"><h1>Play</h1><!--img src="/images/360_icon.png" width="100%" height="100%"--></div>
+			<div id="eq-icon" onclick="init();"><h1>Play</h1><!--img src="/images/360_icon.png" width="100%" height="100%"--></div>
 		</div>
 
 		<script>
@@ -57,7 +57,6 @@
 			onPointerDownLon = 0,
 			onPointerDownLat = 0;
 
-			init();
 			animate();
 
 			function init() {
@@ -84,7 +83,7 @@
 				texture.format = THREE.RGBFormat;
 				var material   = new THREE.MeshBasicMaterial( { map : texture } );
 				mesh = new THREE.Mesh( geometry, material );
-
+				video.play();
 				scene.add( mesh );
 
 				renderer = new THREE.WebGLRenderer();
@@ -122,7 +121,6 @@
 				onPointerDownLon = lon;
 				onPointerDownLat = lat;
 				hideIcon();
-				video.play();
 			}
 
 			function onDocumentMouseMove( event ) {
