--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -30,16 +30,12 @@
 			  opacity: 1.0;
 			  pointer-events: none;
 			}
-			#container{
-				width: 100%;
-				height: 100%;
-			}
 
 		</style>
 	</head>
 	<body>
 		<div id="container">
-			<div id="eq-icon" onclick="init();"><h1>Play</h1><!--img src="/images/360_icon.png" width="100%" height="100%"--></div>
+			<button onclick="playvideo()"><h1>360</h1></button><!--img src="/images/360_icon.png" width="100%" height="100%"--></div>
 		</div>
 
 		<script>
@@ -57,6 +53,7 @@
 			onPointerDownLon = 0,
 			onPointerDownLat = 0;
 
+			init();
 			animate();
 
 			function init() {
@@ -68,7 +65,6 @@
 
 				var geometry = new THREE.SphereBufferGeometry( 500, 60, 40 );
 				geometry.scale( - 1, 1, 1 );
-
 
 				var video = document.createElement( 'video' );
 				video.width = 640;
@@ -83,7 +79,7 @@
 				texture.format = THREE.RGBFormat;
 				var material   = new THREE.MeshBasicMaterial( { map : texture } );
 				mesh = new THREE.Mesh( geometry, material );
-				video.play();
+
 				scene.add( mesh );
 
 				renderer = new THREE.WebGLRenderer();
@@ -97,13 +93,16 @@
 				window.addEventListener( 'resize', onWindowResize, false );
 			}
 
+			function playvideo(){
+				video.play();
+			}
+
 			function onWindowResize() {
 				camera.aspect = window.innerWidth / window.innerHeight;
 				camera.updateProjectionMatrix();
 				renderer.setSize( window.innerWidth, window.innerHeight );
 			}
 			
-
 			function hideIcon(){
         		document.getElementById('eq-icon').style.opacity= '0.25';
    			}
