--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -27,9 +27,7 @@
 		</style>
 	</head>
 	<body>
-		<div id="container">
-			<button id="eq-icon" onclick="playvideo()">360</button><!--img src="/images/360_icon.png" width="100%" height="100%"--></div>
-		</div>
+		<div id="container"></div>
 
 		<script>
 			var camera, scene, renderer;
