--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -68,7 +68,7 @@
 				geometry.scale( - 1, 1, 1 );
 
 				var material = new THREE.MeshBasicMaterial( {
-					map: new THREE.TextureLoader().load( 'pano_static.jpg' )
+					map: new THREE.TextureLoader().load( 'Image/panostatic.jpg' )
 				} );
 				mesh = new THREE.Mesh( geometry, material );
 
