--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -68,7 +68,7 @@
 				geometry.scale( - 1, 1, 1 );
 
 				var material = new THREE.MeshBasicMaterial( {
-					map: new THREE.TextureLoader().load( 'http://i.imgur.com/3tU4Vig.jpg' )
+					map: new THREE.TextureLoader().load( 'Textures/2294472375_24a3b8ef46_o.jpg' )
 				} );
 				mesh = new THREE.Mesh( geometry, material );
 
