--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -69,10 +69,11 @@
 				
 				THREE.TextureLoader.crossOrigin = '';				
 				var material = new THREE.MeshBasicMaterial( {
-					map: new THREE.TextureLoader().load( 'Textures/2294472375_24a3b8ef46_o.jpg' )
-				} );
+					map: new THREE.TextureLoader();
+					loader.setCrossOrigin("anonymous");
+					loader.load('Textures/2294472375_24a3b8ef46_o.jpg')} );
 				mesh = new THREE.Mesh( geometry, material );
-
+				
 				scene.add( mesh );
 
 				renderer = new THREE.WebGLRenderer();
