--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -71,7 +71,7 @@
 				var material = new THREE.MeshBasicMaterial( {
 					map: new THREE.TextureLoader();
 					loader.setCrossOrigin("anonymous");
-					loader.load('Textures/2294472375_24a3b8ef46_o.jpg')} );
+					loader.load('Textures/2294472375_24a3b8ef46_o.jpg');} );
 				mesh = new THREE.Mesh( geometry, material );
 				
 				scene.add( mesh );
