--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -67,11 +67,18 @@
 				var geometry = new THREE.SphereGeometry( 500, 60, 40 );
 				geometry.scale( - 1, 1, 1 );
 				
-				THREE.TextureLoader.crossOrigin = '';				
+
 				var material = new THREE.MeshBasicMaterial( {
-					map: new THREE.TextureLoader();
-					loader.setCrossOrigin("anonymous");
-					loader.load('Textures/2294472375_24a3b8ef46_o.jpg');} );
+
+					map: var loader = new THREE.TextureLoader();
+				loader.setCrossOrigin("anonymous");
+				loader.load('Textures/2294472375_24a3b8ef46_o.jpg',);
+
+				});
+
+
+
+
 				mesh = new THREE.Mesh( geometry, material );
 				
 				scene.add( mesh );
