--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -71,7 +71,7 @@
 				texture.minFilter = THREE.LinearFilter;
 				texture.format = THREE.RGBFormat;
 				texture.setCrossOrigin("anonymous");
-				texture.load('Textures/2294472375_24a3b8ef46_o.jpg',);
+				texture.load('Textures/2294472375_24a3b8ef46_o.jpg');
 
 				var material = new THREE.MeshBasicMaterial( { map : texture });
 
