--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -53,7 +53,7 @@
 			  	} 
 
 			  	else {
-			  		initMobile();
+			  		initWeb();
 			   	}
 			}
 
@@ -66,15 +66,12 @@
 
 				var geometry = new THREE.SphereGeometry( 500, 60, 40 );
 				geometry.scale( - 1, 1, 1 );
-				
-				var bigtexture = new THREE.TextureLoader();
-				bigtexture.setCrossOrigin("anonymous");
-				bigtexture.load('Textures/2294472375_24a3b8ef46_o.jpg');
 
-				var material = new THREE.MeshBasicMaterial( {map: bigtexture} );
-
+				var material = new THREE.MeshBasicMaterial( {
+					map: new THREE.TextureLoader().load( 'Textures/2294472375_24a3b8ef46_o.jpg' )
+				} );
 				mesh = new THREE.Mesh( geometry, material );
-				
+
 				scene.add( mesh );
 
 				renderer = new THREE.WebGLRenderer();
