--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -45,7 +45,6 @@
 			
 			utilCheck();
 			animate();
-			
 
 			function utilCheck(){
 				if(window.innerWidth <= 800 && window.innerHeight <= 600) {
@@ -67,9 +66,13 @@
 				var geometry = new THREE.SphereGeometry( 500, 60, 40 );
 				geometry.scale( - 1, 1, 1 );
 
+				var texture = new THREE.TextureLoader();
+				texture.setCrossOrigin("");
+
 				var material = new THREE.MeshBasicMaterial( {
-					map: new THREE.TextureLoader().load( 'Textures/2294472375_24a3b8ef46_o.jpg' )
+					map: texture.load( 'Textures/2294472375_24a3b8ef46_o.jpg' )
 				} );
+
 				mesh = new THREE.Mesh( geometry, material );
 
 				scene.add( mesh );
