--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        	<script src="Build/three.js"></script>
-        	<script src="JS/OrbitControls.js"></script>
+		<script src="Build/three.js"></script>
+        <script src="js/controls/OrbitControls.js"></script>
 		<style>
 			body {
 				background-color: #000000;
@@ -50,11 +50,11 @@
 			function utilCheck(){
 				
 				if(window.innerWidth <= 800 && window.innerHeight <= 600) {
-					initMobile();
+				    initWeb();
 			  	} 
 
 			  	else {
-			  		initWeb();
+			  		initMobile();
 			   	}
 			}
 
@@ -89,7 +89,7 @@
                 //controls.target.set( 0, 12, 0 );
                 camera.position.set( 1, 0, 0 );
                 //controls.autoRotate = true;
-                controls.enableZoom = true;
+                controls.enableZoom = false;
                 controls.enablePan = false;
 
                 window.addEventListener( 'resize', onWindowResize, false );
@@ -132,7 +132,7 @@
                 //controls.target.set( 0, 12, 0 );
                 camera.position.set( 2, 16, 28 );
                 //controls.autoRotate = true;
-                controls.enableZoom = true;
+                controls.enableZoom = false;
                 controls.enablePan = false;
 
                 window.addEventListener( 'resize', onWindowResize, false );
