--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-		<script src="Build/three.js"></script>
-        <script src="js/controls/OrbitControls.js"></script>
+        	<script src="Build/three.js"></script>
+        	<script src="JS/OrbitControls.js"></script>
 		<style>
 			body {
 				background-color: #000000;
