--- a/snobal-header.html
+++ b/snobal-header.html
@@ -169,7 +169,7 @@
         <div id ="overlay">
             <div id="center-quote">
                     <h1><a class = "underline"> Make</a> Sales Quicker</h1>
-                    <h2>Collaborative VR Tools to communicate, <br>engage and sell ideas faster</h2></span>
+                    <h2>Collaborative VR Tools to communicate, <br>engage and sell ideas faster</h2>
             </div>
         </div>
     </div>
