--- a/snobal-header.html
+++ b/snobal-header.html
@@ -199,6 +199,7 @@
 
                 camera = new THREE.PerspectiveCamera( 36, window.innerWidth / window.innerHeight, 1, 2000 );
                 camera.position.set( 2, 16, 28 );
+
                 
                 scene = new THREE.Scene();
 
@@ -226,7 +227,16 @@
                     var action = object.mixer.clipAction( object.animations[ 0 ] );
                     action.play();
                     scene.add( object );
-                    object.scale.x = object.scale.y = object.scale.z = 0.028;
+
+                    function mobCheck(){
+                        if(window.innerWidth <= 800 && window.innerHeight <= 600) {
+                            controls.enabled = false;
+                            object.scale.x = object.scale.y = object.scale.z = 0.25;} 
+                        else {
+                            controls.enabled = true; 
+                            object.scale.x = object.scale.y = object.scale.z = 0.028;}
+                    } mobCheck();
+
                     object.position.y = 0.7;
 
                 }, onProgress, onError );
@@ -241,11 +251,6 @@
                 // controls, camera
                 controls = new THREE.OrbitControls( camera, renderer.domElement );
 
-                mobCheck();
-                function mobCheck(){
-                    if(window.innerWidth <= 800 && window.innerHeight <= 600) {controls.enabled = false;} 
-                    else {controls.enabled = true;}
-			     }
                 controls.autoRotate = true;
                 controls.autoRotateSpeed = 0.5;
                 controls.rotateSpeed = 0.5;
@@ -258,7 +263,7 @@
                 light.position.set(0, 1, 0);
                 scene.add(light);
 
-                light = new THREE.DirectionalLight(0xffffff, 2.1);
+                light = new THREE.DirectionalLight(0xffffff, 2.05);
                 light.position.set(0, 1, 0);
                 scene.add(light);
 
