--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -54,7 +54,7 @@
 				texture.setCrossOrigin("");
 
 				var material = new THREE.MeshBasicMaterial( {
-					map: texture.load( 'Textures/2294472375_24a3b8ef46_o.jpg' )
+					map: texture.load( 'Textures/snobal-shopping-pano.jpg' )
 				} );
 
 				mesh = new THREE.Mesh( geometry, material );
@@ -80,19 +80,29 @@
 				var geometry = new THREE.SphereBufferGeometry( 500, 60, 40 );
 				geometry.scale( - 1, 1, 1 );
 
+				/* //video
 				var video = document.createElement( 'video' );
 				video.width = 640;
 				video.height = 360;
 				video.loop = true;
 				video.muted = true;
-				video.src = "pano.webm";
+				video.src = " ********* ";
 				video.play();
 				video.setAttribute( 'webkit-playsinline', 'webkit-playsinline' );
 
 				var texture = new THREE.VideoTexture( video );
 				texture.minFilter = THREE.LinearFilter;
 				texture.format = THREE.RGBFormat;
-				var material   = new THREE.MeshBasicMaterial( { map : texture } );
+				var material   = new THREE.MeshBasicMaterial( { map : texture } );*/
+				
+				//panorama
+				var texture = new THREE.TextureLoader();
+				texture.setCrossOrigin("");
+
+				var material = new THREE.MeshBasicMaterial( {
+					map: texture.load( 'Textures/snobal-shopping-pano.jpg' )
+				} );
+				
 				mesh = new THREE.Mesh( geometry, material );
 
 				scene.add( mesh );
