--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -24,7 +24,9 @@
 		</style>
 	</head>
 	<body>
-		<div id="container"></div>
+		<div id="container">
+			<div id="eq-icon">360</div>
+		</div>
 		
 		<script src="Build/three.js"></script>
         	<script src="JS/OrbitControls.js"></script>
