--- a/snobal-pano.html
+++ b/snobal-pano.html
@@ -13,7 +13,7 @@
 			
 			#eq-icon{
 			  position: absolute;
-				text-align:center
+			  text-align:center
 			  z-index: 15;
 			  width: 160px;
 			  height: 160px;
@@ -24,9 +24,9 @@
 		</style>
 	</head>
 	<body>
-		<div id="container">
-			<div id="eq-icon">360</div>
-		</div>
+
+		<div id="eq-icon">360</div>
+		<div id="container"></div>
 		
 		<script src="Build/three.js"></script>
         	<script src="JS/OrbitControls.js"></script>
