--- a/snobal-header.html
+++ b/snobal-header.html
@@ -168,7 +168,8 @@
     <div id="container">
         <div id ="overlay">
             <div id="center-quote">
-                    <h1>Collaborative Design, Measured Engagement</h1>
+                    <h1>VR Tools for Business</h1>
+                    <h2>Collaborative VR Tools to communicate, <br>engage and sell ideas faster</h2>
             </div>
         </div>
     </div>
